# MLOPS-project

./: .gitignore  .gitleaks.toml  .gitleaksignore  .gitleaksignore.md  .trivyignore  AI-DEV-ASSIST-GUARDRAILS.md  CLAUDE.md  FUTURE-ENHANCEMENTS.md  README.md  aws-apprunner.md  beru_pipeline.py
0-data-lab/: GEMINI.md  README.md
1-FineTuning-Pipeline/: README.md  bookmark.md  chunk_data.py  config.yaml  config_beru.yaml  (+13 more)
10-crewai-mlops/: .gitignore  LINKEDIN-NARRATIVE.md  README.md  __init__.py  pyproject.toml  requirements.txt
10-crewai-mlops/beru/: __init__.py  agents.py  config_loader.py  llm-config.yaml  main.py  schemas.py
10-crewai-mlops/beru/crews/: __init__.py  beru_audit.py
10-crewai-mlops/beru/crews/ac-access-control/: __init__.py  crew.py  manifest.yaml
10-crewai-mlops/beru/crews/ai-rmf-assess/: __init__.py  collectors.py  crew.py  manifest.yaml
10-crewai-mlops/beru/crews/ai-safety-m23-07/: collectors.py  crew.py  manifest.yaml
10-crewai-mlops/beru/crews/au-logging-maturity/: collectors.py  crew.py  manifest.yaml
10-crewai-mlops/beru/crews/cmmc-level2/: __init__.py  collectors.py  crew.py  manifest.yaml
10-crewai-mlops/beru/crews/icam-m24-04/: collectors.py  crew.py  manifest.yaml
10-crewai-mlops/beru/crews/zt-zero-trust/: collectors.py  crew.py  manifest.yaml
10-crewai-mlops/rag_ingestion/: agents.py  collectors.py  main.py  requirements.txt  tools.py
10-crewai-mlops/rag_ingestion/crews/: prep_crew.py
10-crewai-mlops/synthetic_pipeline/: agents.py  main.py  tools.py
10-crewai-mlops/synthetic_pipeline/crews/: pipeline_crew.py
(+928 files in other folders)
