[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-crewai-mlops"
version = "0.1.0"
description = "CrewAI workflows that turn AI governance and MLOps playbooks into repeatable agentic review flows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "crewai[tools]==0.186.1",
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "httpx==0.27.2",
  "pydantic==2.8.2",
  "python-dotenv==1.0.1",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
gp-crewai-synthetic = "crewai_mlops.synthetic_pipeline.main:_cli"
gp-crewai-rag-prep = "crewai_mlops.rag_ingestion.main:_cli"
gp-crewai-beru = "crewai_mlops.beru.main:_cli"

[tool.setuptools]
packages = [
  "crewai_mlops",
  "crewai_mlops.synthetic_pipeline",
  "crewai_mlops.synthetic_pipeline.crews",
  "crewai_mlops.beru",
  "crewai_mlops.beru.crews",
  "crewai_mlops.rag_ingestion",
  "crewai_mlops.rag_ingestion.crews",
]

[tool.setuptools.package-dir]
crewai_mlops = "."

[tool.ruff]
line-length = 100
target-version = "py311"
